Version 0.2.2:
	New features:
	- Use libt3window's new functionality to retrieve modifiers.

	Bug fixes:
	- Make single click work for list_pane_t (#3).
	- Update the edit_window_t contents on scrollbar click (#7).
	- Ungrab the mouse if there is a selection in a text-field drop-down list.
	- Hide the drop-down list on pressing enter in a text field.

Version 0.2.1:
	Bug fixes:
	- Fix a crash on summoning the Open File dialog when the current file is in
	  a non-existent directory.
	- Fix scrollbar slider sizing for texts which do not span the entire
	  screen.

Version 0.2.0:
	New features:
	- New dialog: attribute_selector_t
	- New widgets: expander_t, color_picker_t, color_pair_picker_t,
	  widget_group_t
	- The text to find from a find dialog opened from the edit_window_t widget
	  is now set from the current selection if applicable.

	Miscelaneous:
	- Changed the set_focus call in window_component_t to change the argument
	  from bool to an enum indicating where the focus came from as well.
	- Renamed focus_set to set_child_focus in container_t
	- Added widget_container_t which serves better as a base class for widgets
	  which group multiple widgets together.
	- Added a parameter to widget_t constructor to allow not registering a
	  widget as a mouse target.

	Bug fixes:
	- Update the visual state of a checkbox on calling set_state.
	- Fix menu item drawing after removal of an item from a menu.
	- When file_dialog_t::set_file is called for an unreadable directory, it no
	  longer crashes the program.

Version 0.1.14:
	Miscelaneous:
	- Changed the visibility of ensure_cursor_on_screen in edit_window_t from
	  private to protected.

Version 0.1.13:
	Bug fixes:
	- Prevent unprintable zero-width characters at the start of a line from
	  being printed separately.
	- Fix cursor positioning for zero-width characters at the start of a line.
	- Fix invalid memory access in X11 handling.

Version 0.1.12:
	New features: